--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,11 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
-#Para lançar uma exceção quando uma propriedade desconhecida é informada!
+#Para lanï¿½ar uma exceï¿½ï¿½o quando uma propriedade desconhecida ï¿½ informada!
 spring.jackson.deserialization.fail-on-unknown-properties=true 
-#Para habilitar uma exceção quando a anotação @JsonIgnore estive sendo usada em uma propriedade
+#Para habilitar uma exceï¿½ï¿½o quando a anotaï¿½ï¿½o @JsonIgnore estive sendo usada em uma propriedade
 spring.jackson.deserialization.fail-on-ignored-properties=true
-#habilita lançar a exception NoHandlerFoundException no projeto. Lança se não tiver um código mapeado para a url...
+#habilita lanï¿½ar a exception NoHandlerFoundException no projeto. Lanï¿½a se nï¿½o tiver um cï¿½digo mapeado para a url...
 spring.mvc.throw-exception-if-no-handler-found=true
-#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois né uma api e não app web
+#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois nï¿½ uma api e nï¿½o app web
 spring.resources.add-mappings=false
