--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<modelmapper.version>2.3.0</modelmapper.version>
 		<squiggly-version>1.3.18</squiggly-version>
 		<jasperreports.version>6.16.0</jasperreports.version>
+		<aws-java-sdk-s3.version>1.11.993</aws-java-sdk-s3.version>
 	</properties>
 
 	<dependencies>
@@ -87,6 +88,11 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>${modelmapper.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>${aws-java-sdk-s3.version}</version>
 		</dependency>
 	</dependencies>
 
