Adicionando a exclusão de fotos no S3 da Amazon

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,24 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
-#Para lanï¿½ar uma exceï¿½ï¿½o quando uma propriedade desconhecida ï¿½ informada!
+server.port=8080
+
+#spring.servlet.multipart.max-file-size=20KB
+#spring.servlet.multipart.max-request-size=20MB
+
+#Para lançar uma exceção quando uma propriedade desconhecida é informada!
 spring.jackson.deserialization.fail-on-unknown-properties=true 
-#Para habilitar uma exceï¿½ï¿½o quando a anotaï¿½ï¿½o @JsonIgnore estive sendo usada em uma propriedade
+#Para habilitar uma exceção quando a anotação @JsonIgnore estive sendo usada em uma propriedade
 spring.jackson.deserialization.fail-on-ignored-properties=true
-#habilita lanï¿½ar a exception NoHandlerFoundException no projeto. Lanï¿½a se nï¿½o tiver um cï¿½digo mapeado para a url...
+#habilita lançar a exception NoHandlerFoundException no projeto. Lança se não tiver um código mapeado para a url...
 spring.mvc.throw-exception-if-no-handler-found=true
-#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois nï¿½ uma api e nï¿½o app web
+#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois é uma api e não app web
 spring.resources.add-mappings=false
+
+#algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
+
+#algafood.storage.s3.id-chave-acesso=
+#algafood.storage.s3.chave-acesso-secreta=
+algafood.storage.s3.bucket=algafood-benja
+algafood.storage.s3.regiao=us-east-2
+algafood.storage.s3.diretorio-fotos=catalogo
