Recuperando foto da Amazon s3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,11 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois é uma api e não app web
 spring.resources.add-mappings=false
 
-#algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
+algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
 
 #algafood.storage.s3.id-chave-acesso=
 #algafood.storage.s3.chave-acesso-secreta=
 algafood.storage.s3.bucket=algafood-benja
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
+algafood.storage.tipo=local
