Adicionando propriedades e classes para envio de e-mails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,16 @@ algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
 algafood.storage.s3.bucket=algafood-benja
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
+#o usuário e senha do s3 estão no Boot DAshboard -> botão direito no projeto -> Open config
+
+#local instancia um bean do service storage local e s3 o storage s3 na amazon
+#Adicionar em Override properties
 algafood.storage.tipo=local
+
+#Configuração de envio de e-mail
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+spring.mail.password=xurupuitaxxxx
+
+algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
