Adicionando envio de e-mail com template utilizando Apache FreMarker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,8 @@ algafood.storage.tipo=local
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
-spring.mail.password=xurupuitaxxxx
+spring.mail.password=
 
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+
+spring.freemarker.settings.locale=pt_BR
