--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,5 +51,6 @@ spring.mail.username=apikey
 spring.mail.password=
 
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+algafood.email.impl=fake
 
 spring.freemarker.settings.locale=pt_BR
