Implementando serviço de envio de e-mail sandbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,8 @@ spring.mail.username=apikey
 spring.mail.password=
 
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
-algafood.email.impl=fake
+algafood.email.impl=sandbox
+
+algafood.email.sandbox.destinatario=contato@financys.com.br
 
 spring.freemarker.settings.locale=pt_BR
