Adicionando eventlistener para enviar e-mail ao confirmar pedido;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.mail.username=apikey
 spring.mail.password=
 
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
-algafood.email.impl=sandbox
+algafood.email.impl=fake
 
 algafood.email.sandbox.destinatario=contato@financys.com.br
 
