ajustes application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.resources.add-mappings=false
 
 algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
 
-algafood.storage.s3.id-chave-acesso=AKIAZLY6YSXMG6KRUS5W
-algafood.storage.s3.chave-acesso-secreta=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
+algafood.storage.s3.id-chave-acesso=
+algafood.storage.s3.chave-acesso-secreta=
 algafood.storage.s3.bucket=algafood-benja
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
