Ajustando a documentação com os links hypermedia

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,7 @@ algafood.email.impl=fake
 algafood.email.sandbox.destinatario=contato@financys.com.br
 
 spring.freemarker.settings.locale=pt_BR
+
+#Aula 19.38
+server.compression.enabled=true
+
