Adicionando log com registros no loggly.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,5 @@ spring.freemarker.settings.locale=pt_BR
 #Aula 19.38
 server.compression.enabled=true
 
+#logging.loggly.token=seu_customer_token_aqui
+
