--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,7 @@ spring.freemarker.settings.locale=pt_BR
 server.compression.enabled=true
 
 #logging.loggly.token=seu_customer_token_aqui
-
+#uri utilizada no resource server para checar o token
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
