Adicionando chave simétrica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,6 +62,9 @@ server.compression.enabled=true
 
 #logging.loggly.token=seu_customer_token_aqui
 #uri utilizada no resource server para checar o token
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+
+#visualizar logs de debug
+#logging.level.org.springframework=debug
