Adicionando chave publica para validar o token jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,6 @@ server.compression.enabled=true
 
 #visualizar logs de debug
 #logging.level.org.springframework=debug
+
+#Encontra a chave publica do certificado que assinou o token
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
