--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,3 +71,7 @@ server.compression.enabled=true
 
 #Encontra a chave publica do certificado que assinou o token
 spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
+algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
