--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,10 @@
 			<version>${spring-security-oauth2.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${spring-fox.version}</version>
