--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,8 +69,9 @@ server.compression.enabled=true
 #visualizar logs de debug
 #logging.level.org.springframework=debug
 
-#Encontra a chave publica do certificado que assinou o token
-spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+#Encontra a chave publica do certificado que assinou o token - Na aula 23.45 foi excluído para utilizar o JWKS
+#spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
 
 algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
 algafood.jwt.keystore.password=123456
