--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3307/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5436/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=postgres
+#spring.datasource.password=AdmPostgres@1991
 
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
@@ -11,6 +14,7 @@ spring.datasource.password=123456
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 spring.datasource.hikari.maximum-pool-size=5
