--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.password=
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create //Pega os scripts gerados e coloca no arquivo ddl.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
+spring.session.store-type=none
+
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
