Removendo SpringFox do projeto

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -35,7 +35,7 @@ algafood.storage.s3.diretorio-fotos=catalogo
 #o usuário e senha do s3 estão no Boot DAshboard -> botão direito no projeto -> Open config
 
 #Configuração de envio de e-mail
-algafood.email.impl=smtp
+algafood.email.impl=fake
 #algafood.email.remetente=
 #spring.mail.host=
 #spring.mail.port=
