--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5436/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:13306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
@@ -22,5 +22,10 @@ server.compression.enabled=true
 #Encontra a chave publica do certificado que assinou o token - Na aula 23.45 foi excluído para utilizar o JWKS
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+
+#habilita o pacote api para aparecer na documentação
+springdoc.packages-to-scan=com.algaworks.algafood.api
+#habilita os paths indicado abaixo para aparecer na documentação - comentado pois foi configurado na classe SpringDocConfig
+#springdoc.paths-to-match=/v1/**, /v2/**
 
 
