Adicionando suporte ao oauth2 no springdoc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,15 @@ springdoc.packages-to-scan=com.algaworks.algafood.api
 #habilita os paths indicado abaixo para aparecer na documentação - comentado pois foi configurado na classe SpringDocConfig
 #springdoc.paths-to-match=/v1/**, /v2/**
 
+springdoc.swagger-ui.oauth.client-id=algafood-web
+springdoc.swagger-ui.oauth.client-secret=web123
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+
+
+#Está local host pois o Authorization Server está configurado no mesmo projeto
+#Em produção colocaria o dns do server ou o dns do authorization server
+springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/authorize
+springdoc.oAuthFlow.tokenUrl=http://localhost:8080/oauth/token
+
 
