Ajustando versão spring-boot

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -25,7 +25,7 @@ server.port=8080
 algafood.storage.tipo=local
 algafood.storage.local.diretorio-fotos=/Users/Equiplano/catalogo
 
-#Configuração de envio de e-mail
+#Configuracaoo de envio de e-mail
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
 algafood.email.impl=fake
 #algafood.email.sandbox.destinatario=contato@financys.com.br
