--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -32,9 +32,9 @@ algafood.storage.s3.diretorio-fotos=catalogo
 #algafood.storage.s3.bucket=
 #algafood.storage.s3.regiao=
 
-#o usuário e senha do s3 estão no Boot DAshboard -> botão direito no projeto -> Open config
+#o usuario e senha do s3 estao no Boot DAshboard -> botao direito no projeto -> Open config
 
-#Configuração de envio de e-mail
+#Configuracao de envio de e-mail
 algafood.email.impl=fake
 #algafood.email.remetente=
 #spring.mail.host=
