--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 spring.session.store-type=none
 
-#Para lançar uma exceção quando uma propriedade desconhecida é informada!
+#Para lanï¿½ar uma excecao quando uma propriedade desconhecida e informada!
 spring.jackson.deserialization.fail-on-unknown-properties=true 
-#Para habilitar uma exceção quando a anotação @JsonIgnore estive sendo usada em uma propriedade
+#Para habilitar uma excecao quando a anotacao @JsonIgnore estive sendo usada em uma propriedade
 spring.jackson.deserialization.fail-on-ignored-properties=true
-#habilita lançar a exception NoHandlerFoundException no projeto. Lança se não tiver um código mapeado para a url...
+#habilita lancar a exception NoHandlerFoundException no projeto. Lanca se nao tiver um codigo mapeado para a url...
 spring.mvc.throw-exception-if-no-handler-found=true
-#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois é uma api e não app web
+#desabilita o resource handler do spring // desabilita os arquivos staticos da pasta static, pois e uma api e nao app web
 spring.resources.add-mappings=false
 
 spring.freemarker.settings.locale=pt_BR
@@ -19,13 +19,13 @@ spring.freemarker.settings.locale=pt_BR
 #Aula 19.38
 server.compression.enabled=true
 
-#Encontra a chave publica do certificado que assinou o token - Na aula 23.45 foi excluído para utilizar o JWKS
+#Encontra a chave publica do certificado que assinou o token - Na aula 23.45 foi excluido para utilizar o JWKS
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
 
-#habilita o pacote api para aparecer na documentação
+#habilita o pacote api para aparecer na documentacao
 springdoc.packages-to-scan=com.algaworks.algafood.api
-#habilita os paths indicado abaixo para aparecer na documentação - comentado pois foi configurado na classe SpringDocConfig
+#habilita os paths indicado abaixo para aparecer na documentacao - comentado pois foi configurado na classe SpringDocConfig
 #springdoc.paths-to-match=/v1/**, /v2/**
 
 springdoc.swagger-ui.oauth.client-id=algafood-web
@@ -34,8 +34,8 @@ springdoc.swagger-ui.oauth.client-secret=web123
 springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
 
 
-#Está local host pois o Authorization Server está configurado no mesmo projeto
-#Em produção colocaria o dns do server ou o dns do authorization server
+#Esta local host pois o Authorization Server esta configurado no mesmo projeto
+#Em producao colocaria o dns do server ou o dns do authorization server
 springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/authorize
 springdoc.oAuthFlow.tokenUrl=http://localhost:8080/oauth/token
 
