Adicionando nova config Authorization Server

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -52,3 +52,5 @@ algafood.email.impl=fake
 #algafood.jwt.keystore.jks-location=
 #algafood.jwt.keystore.password=
 #algafood.jwt.keystore.keypair-alias=
+
+algafood.auth.provider-url=http://auth.algafood.com.br
