--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,7 @@
 		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
 		<springdoc.version>1.6.14</springdoc.version>
 		<google-guava.version>31.1-jre</google-guava.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+		<springauthserver.version>0.3.1</springauthserver.version>
 	</properties>
 
 	<dependencies>
@@ -150,6 +149,11 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-security</artifactId>
 			<version>${springdoc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-authorization-server</artifactId>
+			<version>${springauthserver.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
