Configurando resource server com token opaco

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -54,3 +54,9 @@ algafood.email.impl=fake
 #algafood.jwt.keystore.keypair-alias=
 
 algafood.auth.provider-url=http://auth.algafood.com.br
+
+#Resource Server Opaque Token
+#Config para buscar e validar o token opaco
+spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://auth.algafood.com.br/oauth2/introspect
+spring.security.oauth2.resourceserver.opaque-token.client-id=algafood-backend
+spring.security.oauth2.resourceserver.opaque-token.client-secret=backend123
