--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -46,3 +46,10 @@ algafood.jwt.keystore.keypair-alias=algafood
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
 algafood.auth.provider-url=http://localhost:8080
+
+#Resource Server Opaque Token
+#Config para buscar e validar o token opaco
+spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://localhost:8080/oauth2/introspect
+spring.security.oauth2.resourceserver.opaque-token.client-id=algafood-backend
+spring.security.oauth2.resourceserver.opaque-token.client-secret=backend123
+
