Trocando token opaco pelo JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.compression.enabled=true
 
 #Encontra a chave publica do certificado que assinou o token - Na aula 23.45 foi excluido para utilizar o JWKS
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
 
 #habilita o pacote api para aparecer na documentacao
 springdoc.packages-to-scan=com.algaworks.algafood.api
