Ajustando Spring doc para usar com o Spring boot 3.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,11 @@ server.compression.enabled=true
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
 
+
+#SPRING DOC
+
 #habilita o pacote api para aparecer na documentacao
+
 springdoc.packages-to-scan=com.algaworks.algafood.api
 #habilita os paths indicado abaixo para aparecer na documentacao - comentado pois foi configurado na classe SpringDocConfig
 #springdoc.paths-to-match=/v1/**, /v2/**
@@ -36,7 +40,8 @@ springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
 
 #Esta local host pois o Authorization Server esta configurado no mesmo projeto
 #Em producao colocaria o dns do server ou o dns do authorization server
-springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/authorize
-springdoc.oAuthFlow.tokenUrl=http://localhost:8080/oauth/token
+springdoc.oAuthFlow.authorizationUrl=http://127.0.0.1:8080/oauth2/authorize
+springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8080/oauth2/token
 
+springdoc.swagger-ui.oauth.use-basic-authentication-with-access-code-grant=true
 
