--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="https://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -18,15 +17,15 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<modelmapper.version>2.3.0</modelmapper.version>
-		<jasperreports.version>6.19.1</jasperreports.version>
-		<aws-java-sdk-s3.version>1.12.261</aws-java-sdk-s3.version>
+		<modelmapper.version>3.1.1</modelmapper.version>
+		<jasperreports.version>6.20.1</jasperreports.version>
+		<aws-java-sdk-s3.version>1.12.429</aws-java-sdk-s3.version>
 		<spring-fox.version>2.9.2</spring-fox.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
 		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
-		<springdoc.version>2.0.0</springdoc.version>
+		<springdoc.version>2.0.4</springdoc.version>
 		<google-guava.version>31.1-jre</google-guava.version>
-		<springauthserver.version>0.3.1</springauthserver.version>
+		<springauthserver.version>1.0.1</springauthserver.version>
 	</properties>
 
 	<dependencies>
