Ajustando para funcionar no Java 17 e Spring boot 3.0

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,5 +1,7 @@
 spring.datasource.username=root
 spring.datasource.password=
+spring.flyway.user=root
+spring.flyway.password=
 #spring.datasource.username=postgres
 #spring.datasource.password=AdmPostgres@1991
 
