--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -21,6 +21,9 @@ server.port=8080
 #spring.servlet.multipart.max-file-size=20KB
 #spring.servlet.multipart.max-request-size=20MB
 
+#Session store
+spring.session.store-type=none
+
 # STORAGE
 #local instancia um bean do service storage local e s3 o storage s3 na amazon
 #Adicionar em Override properties
